2003-07-22  Derek Price  <derek@ximbiot.com>

	* system.h: Assume <stddef.h> per C89.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* strerror.c: Import current version from GNULIB.
	* Makefile.in: Regenerated.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Make a comment more specific about LIBOBJ, while
	removing a list of LIBOBJ'd file maintained elsewhere.
	* memmove.c: Import current version from GNULIB.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* exit.h: Really add this file this time.
	* Makefile.in: Regenerated.

2003-07-22  Derek Price  <derek@ximbiot.com>

	* exit.h: New file from GNULIB.
	* Makefile.am (lib_SOURCES): Add exit.h.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* stat.c: Sync us with GNULIB, except for the xalloc.h requirement.
	xalloc.h is waiting on $GNULIB/modules/error for import.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* Makefile.am: Add getndelim.c & getnline.c as part of the new API.
	* getline.c: Merge more of Bruno Habile's GNULIB changes to this file
	so our fork is less divergent.
	* getline.h: Ditto.
	* getndelim2.c: Ditto.
	* getndelim2.h: Ditto.
	* getnline.c: Ditto.
	* getnline.h: Ditto.

	* Makefile.in: Regenerated.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* savecwd.c: Move the MD5 stuff that shifted here a few commits back...
	* md5.c: ...back to here.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* getndelim2.c: Make limit an ssize_t rather than int, as per the
	return type.
	* getndelim2.h: Ditto.
	* getnline.c: Ditto.
	* getnline.h: Ditto.

2003-07-19  Derek Price  <derek@ximbiot.com>

	* getline.c (getdelim): Return ssize_t, as per getline.h.

2003-07-17  Derek Price  <derek@ximbiot.com>

	* getline.c: Merge some of Bruno Habile's changes from GNULIB including
	some he didn't quite finish, like renaming of n => linesize.
	* getline.h: Ditto.
	* getndelim2.c: Ditto.
	* getndelim2.h: Ditto.
	* getnline.c: Ditto.
	* getnline.h: Ditto.

2003-07-17  Derek Price  <derek@ximbiot.com>
